# buildpacks-dotnet

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: check_changelog.yml  ci.yml  inventory.yml  release.yml  trigger-classic-buildpack.yml
buildpacks/dotnet/: CHANGELOG.md  Cargo.toml  buildpack.toml  inventory.toml  release_schedule.toml  version_warnings.toml
buildpacks/dotnet/src/: app_source.rs  detect.rs  dotnet_buildpack_configuration.rs  dotnet_executable_finder.rs  dotnet_layer_env.rs  dotnet_project.rs  dotnet_publish_command.rs  dotnet_rid.rs  dotnet_runtime_identifier.rs  dotnet_sdk_command.rs  dotnet_sln_project_parser.rs  dotnet_solution.rs  errors.rs  global_json.rs  launch_process.rs  main.rs  project_toml.rs  strategy.rs  test_utils.rs  tfm.rs  tfm_to_semver.rs  utils.rs
buildpacks/dotnet/src/dotnet/: dotnet_project.rs  dotnet_solution.rs  global_json.rs  mod.rs  project.rs  runtime_identifier.rs  slnx.rs  solution.rs  target_framework_moniker.rs
buildpacks/dotnet/src/layers/: mod.rs  nuget_cache.rs  runtime.rs  sdk.rs
buildpacks/dotnet/src/snapshots/: buildpack_detection_error.snap  configured_solution_file_not_found_error.snap  copy_runtime_files_error.snap  discover_app_source_detection_io_error.snap  discover_app_source_multiple_file_based_apps_error.snap  discover_app_source_multiple_project_files_error.snap  discover_app_source_multiple_solution_files_error.snap  discover_app_source_no_app_found_error.snap  discover_app_source_unrecognized_app_extension_error.snap  invalid_configured_path_error.snap  invalid_path_error.snap  libcnb_internal_buildpack_error.snap  load_app_source_file_based_app_read_error.snap  load_app_source_project_missing_target_framework_error.snap  load_app_source_project_read_directory_build_props_error.snap  load_app_source_project_read_error.snap  load_app_source_project_xml_parse_directory_build_props_error.snap  load_app_source_solution_load_project_missing_target_framework_error.snap  load_app_source_solution_load_project_read_error.snap  load_app_source_solution_project_not_found_error.snap  load_file_based_app_file_read_error.snap  load_project_file_read_error.snap  load_project_file_xml_parse_error.snap  load_solution_file_load_project_missing_target_framework_error.snap  load_solution_file_load_project_xml_parse_error.snap  load_solution_file_project_not_found_error.snap  load_solution_file_read_error.snap  load_solution_file_slnx_parse_error.snap  multiple_root_directory_file_based_app_files_error.snap  multiple_root_directory_solution_files_error.snap  no_app_found_error.snap  no_solution_projects_error.snap  parse_buildpack_configuration_invalid_msbuild_verbosity_level_error.snap  parse_buildpack_configuration_invalid_solution_file_error.snap  parse_buildpack_configuration_solution_file_contains_path_error.snap  parse_buildpack_configuration_solution_file_invalid_extension_error.snap  parse_buildpack_configuration_unsupported_execution_environment_error.snap  parse_global_json_error.snap  parse_global_json_invalid_roll_forward_policy_error.snap  parse_global_json_sdk_config_invalid_roll_forward_error.snap  (+23 more)
buildpacks/dotnet/tests/: detect_test.rs  dotnet_publish_test.rs  dotnet_restore_tools_test.rs  dotnet_test_test.rs  mod.rs  nuget_layer_test.rs  runtime_dependencies_test.rs  sdk_installation_test.rs  test_execution_environment_test.rs
buildpacks/dotnet/tests/fixtures/basic_web_10.0/: foo.csproj
buildpacks/dotnet/tests/fixtures/basic_web_9.0/: foo.csproj
buildpacks/dotnet/tests/fixtures/basic_web_9.0_with_procfile/: Procfile
buildpacks/dotnet/tests/fixtures/basic_web_with_global_json_prerelease_sdk/: global.json
buildpacks/dotnet/tests/fixtures/class_library/: Class1.cs
buildpacks/dotnet/tests/fixtures/console_with_compilation_error/: Program.cs
buildpacks/dotnet/tests/fixtures/console_with_dotnet_tool/: consoleapp.csproj
buildpacks/dotnet/tests/fixtures/console_with_dotnet_tool/.config/: dotnet-tools.json
buildpacks/dotnet/tests/fixtures/console_with_dotnet_tool_configuration_error/: consoleapp.csproj
buildpacks/dotnet/tests/fixtures/console_with_dotnet_tool_configuration_error/.config/: dotnet-tools.json
buildpacks/dotnet/tests/fixtures/console_with_nuget_package/: consoleapp.csproj  global.json
buildpacks/dotnet/tests/fixtures/file_based_app_basic_console/: foo.cs
buildpacks/dotnet/tests/fixtures/file_based_app_basic_web/: foo.cs
buildpacks/dotnet/tests/fixtures/multiple_solutions/: foo.sln
buildpacks/dotnet/tests/fixtures/multiple_solutions_with_project_toml/: baz.slnx  project.toml
buildpacks/dotnet/tests/fixtures/project_toml_msbuild_only/: project.toml
buildpacks/dotnet/tests/fixtures/project_toml_solution_only/: project.toml
buildpacks/dotnet/tests/fixtures/project_with_nuget_sdk_and_global_json/: Test1.cs  foo.csproj
buildpacks/dotnet/tests/fixtures/solution_slnx_with_web_and_console_projects/: foo.slnx
buildpacks/dotnet/tests/fixtures/solution_slnx_with_web_and_console_projects/worker/: worker.csproj
buildpacks/dotnet/tests/fixtures/solution_with_spaces/: solution with spaces.sln
buildpacks/dotnet/tests/fixtures/solution_with_web_and_console_projects/: foo.sln
buildpacks/dotnet/tests/fixtures/xunit_project/: FooTests.cs
buildpacks/dotnet/tests/fixtures/xunit_project_fail/: FooTests.cs
shared/dotnet-utils/: Cargo.toml
shared/inventory-updater/: Cargo.toml
shared/inventory-updater/src/: main.rs
