[workspace]
resolver = "2"

members = [
    "buildpacks/dotnet",
    "shared/inventory-updater"
]

[workspace.package]
rust-version = "1.85.1"
edition = "2024"
license = "BSD-3-Clause"

[workspace.lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"
# Allows the usage of cfg(coverage_nightly).
# cargo-llvm-cov enables that config when instrumenting our code, so we can enable
# the experimental coverage_attribute feature.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
panic_in_result_fn = "warn"
# The explicit priority is required due to https://github.com/rust-lang/cargo/issues/13565.
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
enum_variant_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
heroku-dotnet-utils = { path = "./shared/dotnet-utils" }

[profile.release]
strip = true
