[package]
name = "buildpack-heroku-dotnet"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
# Disable automatic integration test discovery, since we import them in main.rs (see comment there).
autotests = false

[lints]
workspace = true

[dependencies]
bullet_stream = "0.7"
fun_run = "0.5"
hex = "0.4"
indoc = "2"
libcnb = { version = "0.28", features = ["trace"] }
libherokubuildpack = { version = "0.28", default-features = false, features = ["tar", "download", "inventory", "inventory-semver", "inventory-sha2"] }
regex = "1"
roxmltree = "0.20"
semver = "1.0"
serde = "1"
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
libcnb-test = "0.28"
regex = "1"
tempfile = "3"
