[package]
name = "buildpack-heroku-dotnet"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
# Disable automatic integration test discovery, since we import them in main.rs (see comment there).
autotests = false

[lints]
workspace = true

[dependencies]
bullet_stream = "0.11"
fs-err = "3"
hex = "0.4"
indoc = "2"
libcnb = { version = "0.29", features = ["trace"] }
libherokubuildpack = { version = "0.30", default-features = false, features = ["tar", "download", "inventory", "inventory-semver", "inventory-sha2"] }
quick-xml = { version = "0.39", features = ["serialize"] }
regex = "1"
retry = { version = "2", default-features = false }
semver = "1"
serde = "1"
serde_json = "1"
sha2 = "0.10"
shell-words = "1"
toml = "0.9"
tracing = "0.1"

[dev-dependencies]
insta = "1"
libcnb-test = "0.29"
regex = "1"
reqwest = { version = "0.13", default-features = false }
tempfile = "3"
toml = "0.9"
