[package]
name = "inventory-updater"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
libherokubuildpack = { version = "0.28", default-features = false, features = ["inventory", "inventory-semver", "inventory-sha2"] }
keep_a_changelog_file = "0.1"
semver = "1.0"
serde = "1"
sha2 = "0.10"
ureq = { version = "3", features = ["json"] }
